Fixed startup animation for IDE page

--- a/src/Brainf_ckSharp.Uwp/Controls/Host/Header/HeaderPanel.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/Header/HeaderPanel.xaml
@@ -23,7 +23,7 @@
                             Value="0"/>
                     </VisualState.Setters>
                 </VisualState>
-                <VisualState x:Name="IDESelected">
+                <VisualState x:Name="IdeSelected">
                     <VisualState.Setters>
                         <Setter
                             Target="SelectionRectangle.(Canvas.Left)"
